[package]
name = "bed2gff"
version = "0.1.5"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"
description = "A Rust BED-to-GFF3 parallel translator"
homepage = "https://github.com/alejandrogzi/bed2gff3"
repository = "https://github.com/alejandrogzi/bed2gff3"
readme = "README.md"
keywords = ["bed", "gff3", "gff", "cli", "bed2gff3"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = {version = "4.0", features = ["derive"]}
colored = {version = "1.0.0"}
log = "0.4.14"
simple_logger = "4.0.0"
indoc = "1.0"
natord = "1.0.9"
chrono = "0.4.31"
rayon = "1.8.0"
num_cpus = "1.16.0"
flate2 = "1.0.28"
thiserror = "1.0.58"
libc = "0.2.153"

[lib]
name = "bed2gff"
path = "src/lib.rs"

[profile.release]
lto = true
